--- a/app/assets/stylesheets/sul-variables.css.scss
+++ b/app/assets/stylesheets/sul-variables.css.scss
@@ -65,6 +65,10 @@ $sul-clear-input-icon-hover-color: $cardinal-red;
 $sul-masthead-bg: $off-green;
 $sul-masthead-border: $pantone-5665;
 $sul-pagination-active-bg-border: $gray-41-percent;
+$sul-btn-disabled-color: $gray;
+$sul-btn-disabled-opacity: 0.75;
+$sul-main-title-date-color: $gray-46-percent;
+
 
 // Sizes
 $gallery-document-width: 176px;
